--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "start": "node ./server/app.js",
     "precommit": "lint-staged",
     "lint": "eslint ./",
-    "test": "mocha server/spec/server-spec.js --timeout 20000 --exit"
+    "test": "mocha server/spec/server-spec.js --timeout 20000 --exit",
+    "report": "mocha server/spec/server-spec.js --timeout 20000 --exit --sort --reporter @mochajs/json-file-reporter",
+    "submit": "node ./.travis/submit.js"
   },
   "lint-staged": {
     "linters": {
@@ -24,6 +26,7 @@
     "request": "^2.69.0"
   },
   "devDependencies": {
+    "@mochajs/json-file-reporter": "^1.3.0",
     "chai": "^3.5.0",
     "colors": "^1.3.3",
     "eslint": "^5.7.0",
